--- a/roboshop/Makefile
+++ b/roboshop/Makefile
@@ -1,3 +1,6 @@
+help:           ## Show this help.
+	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
+
 frontend:
 	@echo installing frontend
 catalouge:
