Jenkins pipeline agents

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+    agent {
+        node { label 'workstation' }
+        }
 
     stages{
 
@@ -18,9 +20,5 @@ pipeline {
           }
 
       }
-
-}
-
-pipeline {
 
 }
