Jenkins pipeline agents

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,19 +5,11 @@ pipeline {
 
     stages{
 
-        stage('terraform init') {
+        stage('one') {
             steps {
-                sh 'cd terraform/roboshop-shell-scripting ; terraform init'
+                sh 'cd jenkins ; echo Hello'
                 }
               }
-        stage('terraform destroy') {
-            steps {
-                sh '''
-                  cd terraform/roboshop-shell-scripting
-                  terraform destroy -auto-approve
-                '''
-                }
-          }
 
       }
 
