--- a/terraform/roboshop-shell-scripting/Jenkinsfile
+++ b/terraform/roboshop-shell-scripting/Jenkinsfile
@@ -1,6 +1,12 @@
 pipeline {
-    agent any
+    agent {
+      node { label 'workstation'}
+    }
+ parameters {
 
+          choice(name: 'ACTION', choices: ['apply', 'destroy'], description: 'Pick terraform action')
+
+  }
     stages{
 
         stage('terraform init') {
@@ -8,19 +14,29 @@ pipeline {
                 sh 'cd terraform/roboshop-shell-scripting ; terraform init'
                 }
               }
-        stage('terraform destroy') {
+        stage('terraform apply') {
+          when {
+            environment name: 'ACTION' , value: 'apply'
+          }
             steps {
                 sh '''
                   cd terraform/roboshop-shell-scripting
-                  terraform destroy -auto-approve
+                  terraform apply -auto-approve
                 '''
                 }
           }
+            stage('terraform destroy') {
+              when {
+                environment name: 'ACTION' , value: 'destroy'
+                  }
+                      steps {
+                          sh '''
+                            cd terraform/roboshop-shell-scripting
+                            terraform destroy -auto-approve
+                          '''
+                          }
+                    }
 
       }
-
-}
-
-pipeline {
 
 }
